# reasoner-validator

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  CHANGELOG.md  DEVELOPER_NOTES.md  Dockerfile  LICENSE  MANIFEST.in  Makefile  Pipfile  README.md  README_testing.md  ars_uuid_result_test_runner.py  docker-compose.yaml  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  reasoner_validator.biolink.html  reasoner_validator.html  reasoner_validator.report.html  reasoner_validator.trapi.html  reasoner_validator.trapi.mapping.html  reasoner_validator.validation_codes.html  reasoner_validator.versioning.html  requirements-dev.txt  requirements-service.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  setup.py.original  sphinx-requirements.txt  validation_codes_dictionary.html
.github/: CODEOWNERS  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature-development.md  feature_request.md  question.md
.github/workflows/: doc_pages.yml  publish-to-test-pypi.yml  pypi_publish.yml  run_tests.yaml  test.yml
_sources/: index.rst.txt  reasoner_validator.rst.txt  reasoner_validator.trapi.mapping.rst.txt  reasoner_validator.validation_codes.rst.txt  reasoner_validator.versioning.rst.txt  validation_codes_dictionary.md.txt
api/: __init__.py  main.py  rvtelemetry.py
app/: main.py  util.py
biolink/: __init__.py
docs/: .nojekyll  conf.py  index.rst  reasoner_validate.rst  reasoner_validator.biolink.rst  reasoner_validator.report.rst  reasoner_validator.rst  reasoner_validator.sri.rst  reasoner_validator.trapi.rst  requirements.txt  validation_codes.md  validation_codes_dictionary.md
reasoner_validate/: __init__.py  validate.py
reasoner_validator/: __init__.py  codes.yaml  github.py  message.py  reasoner_validator  report.py  requirements.txt  util.py  validation_codes.py  validator.py  versioning.py  versions.yaml
reasoner_validator/biolink/: __init__.py  ontology.py
reasoner_validator/data/: TranslatorReasonerAPI-1.1.yml  TranslatorReasonerAPI.yml
reasoner_validator/sri/: __init__.py  util.py
reasoner_validator/translator/sri/: __init__.py
reasoner_validator/trapi/: __init__.py  mapping.py
reasoner_validator/trapi/biolink/: __init__.py  validator.py
reasoner_validator/utils/: __init__.py  http.py
scripts/: ars_uuid_result_test_runner.py  sample_script.py  trapi_releases.py  trapi_response_validator.py  trapi_validator.py
tests/: README.md  __init__.py  conftest.py  test_biolink_compliance_validation.py  test_ontology.py  test_response_validation.py  test_response_validator.py  test_semver.py  test_trapi_versioning.py  test_utils.py  test_validate.py  test_validation_report.py  test_versioning.py  test_workflows.py
tests/test_data/: patched_trapi_schema_v1.4.0-beta5.yaml  sample_trapi_schema.yaml  sample_trapi_schema_v3.2.1-beta5.yaml  trapi_schema_v1.5.0.yaml
