[tool.poetry]
name = "reasoner-validator"
version = "3.9.0"
description = "Validation tools for Reasoner API"
authors = [
    "Richard Bruskiewich <richard.bruskiewich@delphinai.com>",
    "Patrick Wang <patrickelvin@gmail.com>"
]
maintainers = [
    "Richard Bruskiewich <richard.bruskiewich@delphinai.com>",
    "Kenneth Morton <kenneth kenny@covar.com>",
    "Sierra Moxon <smoxon@lbl.gov>"
]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/NCATSTranslator"
repository = "https://github.com/NCATSTranslator/reasoner-validator"
documentation = "https://translator-reasoner-validator.readthedocs.io/en/latest/"
keywords = [
    "NCATS",
    "Biomedical Data Translator",
    "Translator",
    "ReasonerAPI",
    "TRAPI",
    "validation",
    "Biolink Model"
]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

packages = [{include = "reasoner_validator"}]

include = [
    { path = "tests" },
    { path = "docs" }
]

[tool.poetry.dependencies]
python = "^3.9"
bmt = "^1.1.1"
#bmt = { git = "https://github.com/biolink/biolink-model-toolkit.git" }

# jsonschema needs to be pinned to <= 4.18.0 for now,
# since 4.18.0 appeared to break something for the
# access and processing of JSON schemata
jsonschema = "~4.17.3"
dictdiffer = "^0.9.0"
PyYAML = "^6.0"
requests = "^2.28.1"
pydantic = "^1.10.11"
urllib3 = "^1.26.15"
numpydoc = {version = "^1.5.0", optional = true}
sphinx = {version = "^6.2.1", optional = true}
myst-parser = {version = "^2.0.0", optional = true}
fastapi = {version = "^0.68", optional = true}
uvicorn = {version = "^0.15", optional = true}
pytest-cov = {version = "^4.0.0"}
pytest = {version = "^7.2.2"}
sphinx-rtd-theme = {version = "^1.2.2", optional = true}


[tool.poetry.urls]
"Change Log" = "https://github.com/NCATSTranslator/reasoner-validator/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/NCATSTranslator/reasoner-validator/issues"

[tool.poetry.extras]
docs = ["numpydoc", "sphinx", "myst-parser", "sphinx-rtd-theme"]
web = ["fastapi", "uvicorn"]

[tool.coverage.run]
source = ["reasoner_validator"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
