[tool.poetry]
name = "reasoner-validator"
version = "5.0.0"
description = "Validation tools for Reasoner API"
authors = [
    "Richard Bruskiewich <richard.bruskiewich@delphinai.com>",
    "Patrick Wang <patrickelvin@gmail.com>"
]
maintainers = [
    "Richard Bruskiewich <richard.bruskiewich@delphinai.com>",
    "Kenneth Morton <kenneth kenny@covar.com>",
    "Sierra Moxon <smoxon@lbl.gov>"
]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/NCATSTranslator"
repository = "https://github.com/NCATSTranslator/reasoner-validator"
documentation = "https://ncatstranslator.github.io/reasoner-validator/"
keywords = [
    "NCATS",
    "Biomedical Data Translator",
    "Translator",
    "ReasonerAPI",
    "TRAPI",
    "validation",
    "Biolink Model"
]
classifiers = [
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Bio-Informatics"
]

packages = [{include = "reasoner_validator"}]

include = [
    { path = "tests" },
    { path = "docs" }
]

[tool.poetry.dependencies]
python = ">=3.9,<3.13"
bmt = "^1.4.5"
bioregistry = "^0.12.33"
jsonschema = "^4.24.0"
dictdiffer = "^0.9.0"
PyYAML = "^6.0"
requests = "^2.28.1"
pydantic = "^2"
urllib3 = "^2.5.0"
poetry-core = "^2.1.3"

[tool.poetry.urls]
"Change Log" = "https://github.com/NCATSTranslator/reasoner-validator/blob/master/CHANGELOG.md"
"Bug Tracker" = "https://github.com/NCATSTranslator/reasoner-validator/issues"

[tool.poetry.group.dev.dependencies]
setuptools = "^78.1.1"
pytest = "^7.4.4"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.23.3"

[tool.poetry.group.docs.dependencies]
numpydoc = "^1.5.0"
sphinx = "^6.2.1"
myst-parser = "^2.0.0"
sphinx-rtd-theme = "^1.2.2"

[tool.poetry.group.web]
optional = true

[tool.poetry.group.web.dependencies]
fastapi = "*"
uvicorn = "*"
httpx = "^0.28.0"
httpcore = "1.0.9"
h11 = "^0.16.0"
# exporting traces for jaeger
opentelemetry-exporter-otlp-proto-http = "*"
# instrumentation for fast api and httpx
opentelemetry-instrumentation-fastapi = "*"
opentelemetry-instrumentation-httpx = "*"

[tool.coverage.run]
source = ["reasoner_validator"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
