[metadata]
name                            = reasoner_validator
version                         = 2.1.0
author                          = Patrick Wang
author_email                    = patrick@covar.com
license                         = MIT
description                     = Validation tools for a Reasoner API
long_description                = file: README.md
long_description_content_type   = text/markdown

[options]
packages = reasoner_validator
zip_safe = false
python_requires = >=3.8